# ClawShell

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  MAINTAINERS.md  Makefile  README.md  clawshell.toml
config/: clawshell.toml  clawshell_dist.toml
daemon-service/capability/ax/: CMakeLists.txt  ax_provider_windows.cc
daemon-service/core/: capability_service.cc  task_registry.cc
daemon-service/daemon/: daemon.cc  daemon.h  vmm_launcher.cc  vmm_launcher.h
daemon-service/ipc/: frame.cc  frame.h  ui_service.cc  windows_ipc_client.cc  windows_ipc_server.cc
docs/: coding-style.md
include/core/: task_registry.h
include/core/base/: service.h
include/ipc/: ipc_client.h  ipc_server.h  ui_service.h  windows_ipc_client.h  windows_ipc_server.h
include/vmm/: vsock_server.h
mcp/client/clawshell-gui/: SKILL.md
mcp/server/: mcp_server.py  vsock_client.py
scripts/: build-rootfs.sh  install.ps1
tests/ipc/: ui_message_factory_test.cc
ui/: App.cs
ui/Channel/: Messages.cs
ui/Forms/: MainForm.cs
ui/Models/: AppState.cs
ui/Panels/: StatusPanel.cs
vmm/: CMakeLists.txt  main.cc  vmm_app.cc  vmm_app.h
vmm/ipc/: vsock_server.cc
vmm/vm/: vm_manager.cc
